--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,51 @@
+body {
+ margin: 0;
+ padding: 0;
+ font-family: monospace;
+}
+
+.navbar {
+ position: fixed;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: row;
+ flex-wrap: wrap;
+ background-color: blueviolet;
+ width: 100%;
+ height: 45px;
+ z-index: 1;
+}
+
+.nav {
+ display: flex;
+ justify-content: right;
+ list-style: none;
+ margin-right: 15%;
+}
+
+.logo {
+flex: 1 1 auto;
+margin-right: 10%;
+text-transform: uppercase; 
+letter-spacing: 1px;
+font-weight: bold;
+font-size: 35px;
+
+
+
+}
+
 * {
 margin: 0;
+}
+
+hr {
+ border-style:none;
+ border-top: solid;
+ border-color: grey;
+ border-width: 2px;
+ width: 5%;
 }
 
 nav {
