--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
  align-items: center;
  flex-direction: row;
  flex-wrap: wrap;
- background-color: blueviolet;
+ background-color: #d4d7de;
  width: 100%;
  height: 45px;
  z-index: 1;
@@ -31,14 +31,30 @@ text-transform: uppercase;
 letter-spacing: 1px;
 font-weight: bold;
 font-size: 35px;
-
-
-
 }
 
-* {
-margin: 0;
+a {
+ margin: 15px;
+ color: #000;
+ text-decoration: none;
+ text-transform: uppercase;
 }
+
+a:hover {
+color: #000;
+}
+
+.banner-area {
+ position: relative;
+ background-image: url(#);
+ width: 100%;
+ height: 400px;
+background-repeat: no-repeat;
+background-size: cover;
+<!-- -webkit-background-size: cover; -->
+}
+
+.about-area, 
 
 hr {
  border-style:none;
