--- a/styles.css
+++ b/styles.css
@@ -48,10 +48,9 @@ color: #000;
  position: relative;
  background-image: url(#);
  width: 100%;
- height: 400px;
+ height: 100vh;
 background-repeat: no-repeat;
 background-size: cover;
-<!-- -webkit-background-size: cover; -->
 }
 
 .about-area, 
